--- a/OneDrive/charcoal/click and drag/click.css
+++ b/OneDrive/charcoal/click and drag/click.css
@@ -57,10 +57,10 @@ html {
   }
   
   .item:nth-child(9n+1) { background: dodgerblue;}
-  .item:nth-child(9n+2) { background: goldenrod;}
+  .item:nth-child(9n+2) { background: royalblue;}
   .item:nth-child(9n+3) { background: paleturquoise;}
   .item:nth-child(9n+4) { background: gold;}
-  .item:nth-child(9n+5) { background: cadetblue;}
+  .item:nth-child(9n+5) { background: red;}
   .item:nth-child(9n+6) { background: tomato;}
   .item:nth-child(9n+7) { background: lightcoral;}
   .item:nth-child(9n+8) { background: darkslateblue;}
