--- a/OneDrive/charcoal/.vscode/Sticky Nav/WEB.css
+++ b/OneDrive/charcoal/.vscode/Sticky Nav/WEB.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background: #eeeeee;
+  background-image: url("balloon\ wallpaper.jpg");
   font-family: "helvetica neue";
   font-size: 20px;
   font-weight: 200;
